# JackEngine

./: .gitmodules  README.md
JackEngine/: CMakeLists.txt  JackEngine.cpp  JackEngine.h
JackEngine/engine/core/: application.cpp  application.h  core.h  logger.cpp  logger.h  timer.cpp  timer.h
JackEngine/engine/platform/: window.cpp  window.h
